--- a/index.html
+++ b/index.html
@@ -777,10 +777,9 @@
                     </form>
                     <div class="mt-2">
                         <span class="payment-logos">
-                            <img src="visa.png" alt="Visa">
-                            <img src="mastercard.png" alt="MasterCard">
-                          
-                            <img src="paystack.png" alt="Paystack">
+                            <a href="https://www.visa.com/" target="_blank" rel="noopener noreferrer"><img src="visa.png" alt="Visa"></a>
+                            <a href="https://www.mastercard.com/" target="_blank" rel="noopener noreferrer"><img src="mastercard.png" alt="MasterCard"></a>
+                            <a href="https://paystack.com/" target="_blank" rel="noopener noreferrer"><img src="paystack.png" alt="Paystack"></a>
                         </span>
                     </div>
                 </div>
