--- a/features.html
+++ b/features.html
@@ -272,6 +272,18 @@
                 margin: 0 8px 20px 8px;
             }
         }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: none; }
+        }
+        .animate-fadein-up {
+            opacity: 0;
+            transition: opacity 0.4s, transform 0.4s;
+        }
+        .animate-fadein-up.visible {
+            opacity: 1;
+            animation: fadeInUp 0.7s cubic-bezier(.4,2,.6,1) both;
+        }
     </style>
 </head>
 <body>
@@ -493,5 +505,22 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    (function() {
+        // Select all tiles to animate
+        const tiles = document.querySelectorAll('.feature-card, .testimonial-card, .highlight-banner, .comparison-table, .video-embed');
+        tiles.forEach(tile => tile.classList.add('animate-fadein-up'));
+        // Intersection Observer
+        const observer = new window.IntersectionObserver((entries, obs) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                    obs.unobserve(entry.target);
+                }
+            });
+        }, { threshold: 0.15 });
+        tiles.forEach(tile => observer.observe(tile));
+    })();
+    </script>
 </body>
 </html> 
