--- a/index.html
+++ b/index.html
@@ -360,6 +360,18 @@
         .flash-card:hover img {
             transform: scale(1.1);
         }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: none; }
+        }
+        .animate-fadein-up {
+            opacity: 0;
+            transition: opacity 0.4s, transform 0.4s;
+        }
+        .animate-fadein-up.visible {
+            opacity: 1;
+            animation: fadeInUp 0.7s cubic-bezier(.4,2,.6,1) both;
+        }
     </style>
 </head>
 <body>
@@ -834,6 +846,22 @@
             const flashTimerDisplay = document.getElementById('flash-timer');
             if (flashTimerDisplay) startFlashTimer(47959, flashTimerDisplay); // 13h 19m 19s
         };
+
+        (function() {
+            // Select all tiles to animate
+            const tiles = document.querySelectorAll('.product-card, .category-card, .testimonial-card, .blog-card, .why-feature, .flash-card');
+            tiles.forEach(tile => tile.classList.add('animate-fadein-up'));
+            // Intersection Observer
+            const observer = new window.IntersectionObserver((entries, obs) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('visible');
+                        obs.unobserve(entry.target);
+                    }
+                });
+            }, { threshold: 0.15 });
+            tiles.forEach(tile => observer.observe(tile));
+        })();
     </script>
 </body>
 </html>
