--- a/index.html
+++ b/index.html
@@ -378,6 +378,14 @@
     <!-- Header Section -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#"><img src="log blue.png" alt="Tech Store Logo"></a>
+        <!-- Search and Favorite (always visible, under logo on mobile) -->
+        <div class="navbar-search-fav d-lg-none w-100 d-flex flex-column align-items-center mb-2">
+            <form class="d-flex w-100 mb-2" role="search" style="max-width: 400px;">
+                <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
+                <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+            <a href="#" class="btn btn-outline-secondary wishlist-mobile mb-2"><i class="far fa-heart"></i></a>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -389,12 +397,14 @@
                 <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
             </ul>
-            <form class="d-flex me-3" role="search">
+            <!-- Desktop search and favorite -->
+            <form class="d-flex me-3 d-none d-lg-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search"></i></button>
             </form>
             <a href="signin.html" class="btn btn-outline-secondary me-2"><i class="fas fa-user"></i> Login</a>
             <a href="#" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
+            <a href="#" class="btn btn-outline-secondary wishlist-desktop d-none d-lg-inline-block me-2"><i class="far fa-heart"></i></a>
             <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">EN / GHS</button>
                 <ul class="dropdown-menu">
@@ -885,6 +895,17 @@
                 margin-left: 8px;
                 margin-right: 8px;
             }
+            .navbar-search-fav {
+                margin-bottom: 0.5rem;
+            }
+            .wishlist-mobile {
+                font-size: 1.3rem;
+                padding: 6px 16px;
+            }
+        }
+        @media (min-width: 992px) {
+            .navbar-search-fav { display: none !important; }
+            .wishlist-desktop { display: inline-block !important; }
         }
         @media (max-width: 767px) {
             .navbar {
