--- a/features.html
+++ b/features.html
@@ -413,7 +413,7 @@
         </div>
         <div class="video-embed">
             <div class="mb-2 fw-bold">Store Walkthrough</div>
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Store Walkthrough" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/neIYdLysqlk" title="Store Walkthrough" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
     <!-- Customer Testimonials -->
