--- a/features.html
+++ b/features.html
@@ -413,7 +413,7 @@
         </div>
         <div class="video-embed">
             <div class="mb-2 fw-bold">Store Walkthrough</div>
-            <iframe src="https://youtu.be/neIYdLysqlk" title="Store Walkthrough" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/neIYdLysqlk" title="I tested the Craziest Xiaomi Gadgets!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
     <!-- Customer Testimonials -->
