--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
     </section>
 
     <!-- Featured Products Search Bar -->
-    <section class="products-section">
+  <!--   <section class="products-section">
         <form class="d-flex justify-content-center mb-4" role="search" style="max-width: 400px; margin: 0 auto;">
             <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
             <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search"></i></button>
@@ -678,7 +678,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Why Shop With Us -->
     <section class="why-section">
