--- a/features.html
+++ b/features.html
@@ -478,7 +478,7 @@
                         <li><i class="fas fa-phone me-2"></i>+233 24 000 0000</li>
                         <li><i class="fas fa-envelope me-2"></i>info@techstore.com</li>
                         <li><i class="fas fa-map-marker-alt me-2"></i>Accra, Ghana</li>
-                        <li><i class="fab fa-whatsapp me-2"></i><a href="#">Chat on WhatsApp</a></li>
+                        <li><i class="fab fa-whatsapp me-2"></i><a href="https://wa.me/+233500300772" target="_blank" rel="noopener noreferrer">Chat on WhatsApp</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
