--- a/product_view.html
+++ b/product_view.html
@@ -72,7 +72,7 @@
                     <span>Share: </span>
                     <a href="#" class="btn btn-outline-secondary btn-sm"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="btn btn-outline-secondary btn-sm"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="btn btn-outline-secondary btn-sm"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+233500300772" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <div class="mt-4">
                     <h6>Delivery & Returns</h6>
