--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
             </ul>
             <a href="signin.html" class="btn btn-outline-secondary me-2"><i class="fas fa-user"></i> Login</a>
-            <a href="#" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
+            <a href="cart.html" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
             <a href="#" class="btn btn-outline-secondary wishlist-desktop d-none d-lg-inline-block me-2"><i class="far fa-heart"></i></a>
             <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">EN / GHS</button>
@@ -862,7 +862,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-12 text-end">
-                    <small>&copy; 2024 Tech Store. All rights reserved.</small>
+                    <small><a href="documentation.html" style="color: #eee; text-decoration: underline;">Read about how this site was built (Documentation)</a></small>
                 </div>
             </div>
         </div>
@@ -872,6 +872,7 @@
     <button class="back-to-top" onclick="window.scrollTo({top:0,behavior:'smooth'})"><i class="fas fa-arrow-up"></i></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="cart.js"></script>
     <script>
         // Example countdown timer for deals
         function startDealTimer(duration, display) {
