--- a/index_user.html
+++ b/index_user.html
@@ -371,18 +371,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
+                <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
             </ul>
             <form class="d-flex me-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search"></i></button>
             </form>
             
-            <a href="#" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
+            <a href="signin.html" class="btn btn-outline-secondary me-2"><i class="fas fa-user"></i> Login</a>
+            <a href="cart.html" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
             <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">EN / GHS</button>
                 <ul class="dropdown-menu">
@@ -752,11 +753,11 @@
                 <div class="col-md-3">
                     <h6>Quick Links</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Terms</a></li>
+                        <li><a href="features.html">Features</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="support.html">Support</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
@@ -779,7 +780,6 @@
                         <span class="payment-logos">
                             <img src="visa.png" alt="Visa">
                             <img src="mastercard.png" alt="MasterCard">
-                            <img src="paypal.png" alt="PayPal">
                             <img src="paystack.png" alt="Paystack">
                         </span>
                     </div>
@@ -787,7 +787,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-12 text-end">
-                    <small>&copy; 2024 Tech Store. All rights reserved.</small>
+                    <small><a href="documentation.html" style="color: #eee; text-decoration: underline;">Read about how this site was built (Documentation)</a></small>
                 </div>
             </div>
         </div>
@@ -797,6 +797,7 @@
     <button class="back-to-top" onclick="window.scrollTo({top:0,behavior:'smooth'})"><i class="fas fa-arrow-up"></i></button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="cart.js"></script>
     <script>
         // Example countdown timer for deals
         function startDealTimer(duration, display) {
