--- a/pricing.html
+++ b/pricing.html
@@ -322,7 +322,7 @@
                 <button class="btn btn-outline-primary" type="submit"><i class="fas fa-search"></i></button>
             </form>
             <a href="signin.html" class="btn btn-outline-primary me-2">Login</a>
-            <a href="#" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
+            <a href="cart.html" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
             <div class="dropdown">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">EN / GHS</button>
                 <ul class="dropdown-menu">
@@ -522,9 +522,9 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="support.html">Contact</a></li>
-                        <li><a href="terms.html">Terms</a></li>
+                        <li><a href="features.html">Features</a></li>
+                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="support.html">Support</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
@@ -547,7 +547,6 @@
                         <span class="payment-logos">
                             <img src="visa.png" alt="Visa">
                             <img src="mastercard.png" alt="MasterCard">
-                            <img src="paypal.png" alt="PayPal">
                             <img src="paystack.png" alt="Paystack">
                         </span>
                     </div>
@@ -555,12 +554,13 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-md-12 text-end">
-                    <small>&copy; 2024 Tech Store. All rights reserved.</small>
+                    <small><a href="documentation.html" style="color: #eee; text-decoration: underline;">Read about how this site was built (Documentation)</a></small>
                 </div>
             </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="cart.js"></script>
     <script>
     (function() {
         // Select all tiles to animate
