--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 <body>
     <!-- Header Section -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="log blue.png" alt="Tech Store Logo"></a>
+        <a class="navbar-brand" href="index.html"><img src="log blue.png" alt="Tech Store Logo"></a>
         <!-- Search and Favorite (always visible, under logo on mobile) -->
         <div class="navbar-search-fav d-lg-none w-100 d-flex flex-column align-items-center mb-2">
             <a href="#" class="btn btn-outline-secondary wishlist-mobile mb-2"><i class="far fa-heart"></i></a>
@@ -387,11 +387,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
+                <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
             </ul>
             <a href="signin.html" class="btn btn-outline-secondary me-2"><i class="fas fa-user"></i> Login</a>
             <a href="cart.html" class="btn btn-outline-primary cart-icon me-2"><i class="fas fa-shopping-cart"></i><span class="cart-count">2</span></a>
@@ -488,7 +488,7 @@
             <div style="font-size: 1.2rem; font-weight: 500;">
                 Time Left: <span id="flash-timer" style="font-weight: 700;">13h : 19m : 19s</span>
                         </div>
-            <a href="#" style="color: white; font-weight: 500; text-decoration: underline;">See All <i class="fas fa-chevron-right"></i></a>
+            <a href="products.html" style="color: white; font-weight: 500; text-decoration: underline;">See All <i class="fas fa-chevron-right"></i></a>
                     </div>
         <div class="row g-4 bg-white p-3" style="border-radius: 0 0 10px 10px;">
             <!-- Example Flash Sale Product Card -->
@@ -828,10 +828,10 @@
                 <div class="col-md-3">
                     <h6>Quick Links</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="support.html">Contact</a></li>
                         <li><a href="#">Terms</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
