--- a/product_view.html
+++ b/product_view.html
@@ -70,8 +70,8 @@
                 <button class="btn btn-outline-danger btn-lg ms-2"><i class="far fa-heart"></i> Wishlist</button>
                 <div class="mt-3">
                     <span>Share: </span>
-                    <a href="#" class="btn btn-outline-secondary btn-sm"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="btn btn-outline-secondary btn-sm"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=product_view.html" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/intent/tweet?url=product_view.html" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
                     <a href="https://wa.me/+233500300772" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
                 </div>
                 <div class="mt-4">
