--- a/products.html
+++ b/products.html
@@ -339,7 +339,7 @@
                 <li class="nav-item"><a class="nav-link active" href="products.html">Products</a></li>
                 <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
                 <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+                <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
             </ul>
             <form class="d-flex me-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search products..." aria-label="Search">
@@ -548,20 +548,20 @@
                 <div class="col-md-3 footer-logo mb-3 mb-md-0">
                     <img src="log white.png" alt="Tech Store Logo">
                     <div class="social-icons mt-3">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.tiktok.com/" target="_blank"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <h6>Quick Links</h6>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Shop</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="support.html">Contact</a></li>
                         <li><a href="#">Terms</a></li>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
