--- a/products.html
+++ b/products.html
@@ -442,7 +442,7 @@
             </div>
             <div class="products-grid">
                 <!-- Example Product Card -->
-                <div class="product-card">
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <span class="discount-tag">-15%</span>
                     <img src="galaxy.png" class="card-img-top" alt="Samsung Galaxy S24">
@@ -452,8 +452,8 @@
                         <div class="rating mb-2">★★★★☆</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="laptop.png" class="card-img-top" alt="HP Pavilion 15">
                     <div class="card-body">
@@ -462,8 +462,8 @@
                         <div class="rating mb-2">★★★★★</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <span class="discount-tag">-10%</span>
                     <img src="accessories.png" class="card-img-top" alt="Wireless Earbuds">
@@ -473,8 +473,8 @@
                         <div class="rating mb-2">★★★★☆</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="gaming.png" class="card-img-top" alt="PlayStation 5">
                     <div class="card-body">
@@ -483,8 +483,8 @@
                         <div class="rating mb-2">★★★★★</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="smart.png" class="card-img-top" alt="Apple Watch Series 9">
                     <div class="card-body">
@@ -493,8 +493,8 @@
                         <div class="rating mb-2">★★★★☆</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="home.png" class="card-img-top" alt="Smart Home Hub">
                     <div class="card-body">
@@ -503,8 +503,8 @@
                         <div class="rating mb-2">★★★☆☆</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="galaxy.png" class="card-img-top" alt="Samsung Galaxy Buds2 Pro">
                     <div class="card-body">
@@ -513,8 +513,8 @@
                         <div class="rating mb-2">★★★★☆</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
-                <div class="product-card">
+                </div></a>
+                <a href="product_view.html" style="text-decoration: none; color: inherit;"><div class="product-card">
                     <span class="wishlist"><i class="far fa-heart"></i></span>
                     <img src="laptop.png" class="card-img-top" alt="Dell XPS 13">
                     <div class="card-body">
@@ -523,7 +523,7 @@
                         <div class="rating mb-2">★★★★★</div>
                         <button class="btn btn-primary btn-cart">Add to Cart</button>
                     </div>
-                </div>
+                </div></a>
             </div>
             <!-- Pagination -->
             <nav aria-label="Page navigation">
