--- a/index_user.html
+++ b/index_user.html
@@ -360,6 +360,24 @@
         .flash-card:hover img {
             transform: scale(1.1);
         }
+        .cart-shake-animate {
+            animation: cart-shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+        }
+        @keyframes cart-shake {
+            10%, 90% { transform: translateX(-2px); }
+            20%, 80% { transform: translateX(4px); }
+            30%, 50%, 70% { transform: translateX(-8px); }
+            40%, 60% { transform: translateX(8px); }
+            100% { transform: none; }
+        }
+        .btn-cart.cart-added-animate, .add-to-cart.cart-added-animate {
+            animation: cart-btn-pop 0.35s cubic-bezier(.36,.07,.19,.97) both;
+        }
+        @keyframes cart-btn-pop {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.18); background: #db2b39; color: #fff; }
+            100% { transform: scale(1); }
+        }
     </style>
 </head>
 <body>
