--- a/documentation.html
+++ b/documentation.html
@@ -39,6 +39,28 @@
             </ul>
         </div>
         <div class="doc-section">
+            <h2>What is Bootstrap?</h2>
+            <p>Bootstrap is a popular open-source CSS framework that provides ready-made styles, layout grids, and components for building responsive and modern websites. It helps developers quickly create layouts that look good on all devices (phones, tablets, computers) without having to write a lot of custom CSS from scratch.</p>
+        </div>
+        <div class="doc-section">
+            <h2>How Bootstrap Was Used in This Site</h2>
+            <ul>
+                <li>The responsive grid system (rows and columns) to arrange products, categories, and sections.</li>
+                <li>Navigation bars, buttons, forms, and pagination for a consistent look and feel.</li>
+                <li>Making the site automatically adjust to different screen sizes.</li>
+                <li>Utility classes for spacing, alignment, and colors, which made the design process faster and more reliable.</li>
+            </ul>
+        </div>
+        <div class="doc-section">
+            <h2>What Was Done With the JavaScript Code</h2>
+            <ul>
+                <li>The main JavaScript file (<code>cart.js</code>) was kept as originally written, handling cart management, cart icon updates, and interactive cart features.</li>
+                <li>Inline JavaScript in the HTML files manages animations, countdown timers, wishlist toggling, sorting, and view switching.</li>
+                <li>No JavaScript was removed or broken during recent edits; all interactive features remain functional.</li>
+                <li>No new JavaScript was added as part of the recent changes.</li>
+            </ul>
+        </div>
+        <div class="doc-section">
             <h2>How I made the site responsive and scalable</h2>
             <p>I wanted everyone to have a good experience, whether they're on a phone, tablet, or computer. So, I used Bootstrap's grid system, which lets me arrange things in rows and columns that automatically adjust to the screen size. I also added media queries in the CSS, so things like the menu, cards, and images change their size or layout on smaller screens.</p>
             <p>For scalability, I kept the code organized and used reusable components like the header and footer on every page. I used flexible units (like %, rem, and em) so the design grows or shrinks smoothly if you zoom in or out. This way, the site can easily handle more products or new features in the future without breaking the layout.</p>
